# parsers

./: .gitignore
c++/: .gitignore  CMakeLists.txt  docker-compose.yml
c++/ccombinator/: CMakeLists.txt
c++/ccombinator/src/: CMakeLists.txt  ccombinator.h  main.cc
c++/ccombinator/test/: CMakeLists.txt  result-test.cc  test.cc
c++/ccombinator/test/json/: json-parser-test.cc  json-parser.cc  json-parser.h  json-test.cc  json.cc  json.h
c++/docker/: Dockerfile
c++/vscode/: launch.json  settings.json
go/: .gitignore  init.bat  init.sh  start.bat  start.sh  test.sh
go/src/parser/: main.go  main_test.go
haskell/: .gitignore  docker-compose.yml  stack.yaml
haskell/docker/: Dockerfile  image-build.sh
haskell/parsers/: ChangeLog.md  fp.md  memo.md  package.yaml  parsers.cabal  stack.yaml
haskell/parsers/app/: Main.hs
haskell/parsers/test/: Spec.hs
haskell/parsers_old/: package.yaml  parsers.cabal
java/parsers/: .gitignore  build.gradle  settings.gradle
java/parsers_java21/: build.gradle.kts  settings.gradle.kts
java/parsers_java8/: build.gradle  settings.gradle
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  mod.rs
rust/src/fp_parser/: common_parser.rs  json_parser.rs  mod.rs  parser.rs  test.rs  (+1 more)
rust_docker/: .gitignore  Cargo.toml  docker-compose.yml
rust_docker/docker/: Dockerfile  image-build.sh
rust_docker/json/: cargo.toml
rust_docker/parser_back/: cargo.toml
scala/parsers/: build.sbt
typescript/parser/: .editorconfig  .eslintrc.json  karma.conf.js  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
(+300 files in other folders)
